支持传入planParams，改为dependencies